--- a/centroids/Makefile
+++ b/centroids/Makefile
@@ -1,4 +1,4 @@
-INCLUDE_DIRS = -I/usr/include/opencv4
+INCLUDE_DIRS = -I/usr/include/opencv4 -I.
 LIB_DIRS = 
 CC=g++
 
@@ -7,9 +7,9 @@ CFLAGS= -O0 -g $(INCLUDE_DIRS) $(CDEFS)
 LIBS= -lrt
 LIBS= -L/usr/lib -lopencv_core -lopencv_flann -lopencv_video -lrt
 
-HFILES= 
+HFILES=  colors.h bounding_box.h
 CFILES= 
-CPPFILES= centroids.cpp
+CPPFILES= centroids.cpp 
 
 SRCS= ${HFILES} ${CFILES}
 CPPOBJS= ${CPPFILES:.cpp=.o}
